--- a/wsgi/todopyramid/requirements.txt
+++ b/wsgi/todopyramid/requirements.txt
@@ -1,4 +1,5 @@
 Chameleon==2.11
+Mako==0.7.3
 MarkupSafe==0.15
 PasteDeploy==1.5.0
 PyBrowserID==0.9.1
@@ -14,6 +15,7 @@ deform-bootstrap-extra==0.2.8
 ipython==0.13.1
 peppercorn==0.4
 pyramid==1.4.3
+pyramid-debugtoolbar==1.0.4
 pyramid-deform==0.2
 pyramid-persona==1.3.1
 pyramid-tm==0.7
