use ENV variable to setup persona

--- a/wsgi/todopyramid/production.ini
+++ b/wsgi/todopyramid/production.ini
@@ -19,7 +19,7 @@ pyramid.includes =
 sqlalchemy.url = sqlite:///%(here)s/todopyramid.sqlite
 
 persona.secret = s00per s3cr3t
-persona.audiences = todopyramid.localhost
+persona.audiences = %(OPENSHIFT_APP_DNS)s
 persona.siteName = ToDo Pyramid
 
 # Option to generate content for new users to try out
