--- a/wsgi/todopyramid/production.ini
+++ b/wsgi/todopyramid/production.ini
@@ -20,7 +20,7 @@ sqlalchemy.url = sqlite:///%(here)s/todopyramid.sqlite
 
 persona.secret = s00per s3cr3t
 #persona.audiences = %(OPENSHIFT_APP_DNS)s
-persona.audiences = http://todopyramid-sgottfried.rhcloud.com
+#persona.audiences = http://todopyramid-sgottfried.rhcloud.com
 persona.siteName = ToDo Pyramid
 
 # Option to generate content for new users to try out
